# autofoom

./: justfile
autofoom/: README.md  pyproject.toml
autofoom/autofoom.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autofoom/lui/: main.py
autofoom/lui/ui/: app.py
