[project]
name = "autofoom"
version = "0.0.1"
description = "Foom User Interface"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "../README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.27.0",
    "openai>=1.3.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
    "requests>=2.32.3",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
lui = "lui.main:main"
tuni = "tuni.main:main"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"